<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="MAIN" Id="{a2ce5618-7741-4802-b2db-ef7c09f8393d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	remotePort		:UDINT := 30003;
	remoteHost		:T_IPv4Addr := '192.168.50.100';
	
	data 			:T_MaxString := 'get_actual_joint_positions()';
	receivedData	:RealTimeData;
	testR			:DATA_R;
	
	rMyRealValue	:INT;
	pReal 			:POINTER TO INT;
	testArray1:		ARRAY[0..3] OF BYTE := [0, 0, 3, 44];
	testArray2:		ARRAY[0..3] OF BYTE := [44, 3, 0, 0];

	stTest			:DATA; 
	test3			:T_MaxString := 'movej([0,1.57,-1.57,3.14,-1.57,1.57],a=0.2,v=0.2,t=0,r=0)\n';
	
	actualLength : UDINT;                  // Tatsächliche Länge des Strings
    i            : UDINT;                  // Schleifenvariabl
	byteArray    : POINTER TO ARRAY[0..255] OF BYTE;
	newArray    : POINTER TO ARRAY[0..51] OF BYTE;
END_VAR

VAR_INPUT
	socket				:T_HSOCKET;
	hListener_OUT 		:T_HSOCKET;
	hListener_IN 		:T_HSOCKET;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[

Kommunikation_Server();
Kommunikation_Client();

//stTest.stTest := 'force()';
stTest.stTest := 'force()';

actualLength := LEN(stTest.stTest);
stTest.arTest[actualLength] := 10;

testR.arrByte := receivedData.messageSize;
//pReal := ADR(receivedData.messageSize);
//rMyRealValue := pReal^;

pReal := ADR(testArray2);
rMyRealValue := pReal^;


hListener_IN.handle := hListener_OUT.handle;
hListener_IN.localAddr.sAddr := '192.168.50.10';
hListener_IN.localAddr.nPort := 53828;
hListener_IN.remoteAddr.sAddr := remoteHost;
hListener_IN.remoteAddr.nPort := remotePort;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>